fix backwards compatibility issues with MiniMessage and Components downgrade to java 8 so 1.16 modded servers arent left out