@@ -8,6 +8,7 @@ import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandMap;
 import org.bukkit.command.TabCompleter;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -17,7 +18,7 @@ public interface VillagerOptimizerCommand extends CommandExecutor, TabCompleter 
     String label();
 
     List<String> NO_TABCOMPLETES = Collections.emptyList();
-    List<String> RADIUS_TABCOMPLETES = List.of("5", "10", "25", "50");
+    List<String> RADIUS_TABCOMPLETES = Arrays.asList("5", "10", "25", "50");
 
     HashSet<VillagerOptimizerCommand> commands = new HashSet<>();
 
