@@ -11,6 +11,7 @@ import me.xginko.villageroptimizer.events.VillagerOptimizeEvent;
 import me.xginko.villageroptimizer.events.VillagerUnoptimizeEvent;
 import me.xginko.villageroptimizer.modules.VillagerOptimizerModule;
 import me.xginko.villageroptimizer.utils.CommonUtil;
+import me.xginko.villageroptimizer.utils.KyoriUtil;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.TextReplacementConfig;
 import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
@@ -27,13 +28,15 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 public class OptimizeByNametag implements VillagerOptimizerModule, Listener {
 
+    private final PlainTextComponentSerializer plainTextSerializer;
     private final VillagerCache villagerCache;
     private final Set<String> nametags;
     private final long cooldown;
@@ -41,19 +44,21 @@ public class OptimizeByNametag implements VillagerOptimizerModule, Listener {
 
     public OptimizeByNametag() {
         shouldEnable();
+        this.plainTextSerializer = PlainTextComponentSerializer.plainText();
         this.villagerCache = VillagerOptimizer.getCache();
         Config config = VillagerOptimizer.getConfiguration();
-        config.master().addComment("optimization-methods.nametag-optimization.enable", """
-                Enable optimization by naming villagers to one of the names configured below.\s
-                Nametag optimized villagers will be unoptimized again when they are renamed to something else.""");
-        this.nametags = config.getList("optimization-methods.nametag-optimization.names", List.of("Optimize", "DisableAI"),
+        config.master().addComment("optimization-methods.nametag-optimization.enable",
+                "Enable optimization by naming villagers to one of the names configured below.\n" +
+                "Nametag optimized villagers will be unoptimized again when they are renamed to something else.");
+        this.nametags = config.getList("optimization-methods.nametag-optimization.names", Arrays.asList("Optimize", "DisableAI"),
                 "Names are case insensitive, capital letters won't matter.")
                 .stream().map(String::toLowerCase).collect(Collectors.toCollection(HashSet::new));
         this.consume_nametag = config.getBoolean("optimization-methods.nametag-optimization.nametags-get-consumed", true,
                 "Enable or disable consumption of the used nametag item.");
-        this.cooldown = config.getInt("optimization-methods.nametag-optimization.optimize-cooldown-seconds", 600, """
-                Cooldown in seconds until a villager can be optimized again using a nametag.\s
-                Here for configuration freedom. Recommended to leave as is to not enable any exploitable behavior.""") * 1000L;
+        this.cooldown = TimeUnit.SECONDS.toMillis(
+                config.getInt("optimization-methods.nametag-optimization.optimize-cooldown-seconds", 600,
+                "Cooldown in seconds until a villager can be optimized again using a nametag.\n" +
+                "Here for configuration freedom. Recommended to leave as is to not enable any exploitable behavior."));
         this.notify_player = config.getBoolean("optimization-methods.nametag-optimization.notify-player", true,
                 "Sends players a message when they successfully optimized a villager.");
         this.log_enabled = config.getBoolean("optimization-methods.nametag-optimization.log", false);
@@ -82,20 +87,27 @@ public class OptimizeByNametag implements VillagerOptimizerModule, Listener {
         if (!player.hasPermission(Optimize.NAMETAG.get())) return;
 
         ItemStack usedItem = player.getInventory().getItem(event.getHand());
-        if (!usedItem.getType().equals(Material.NAME_TAG)) return;
+        if (usedItem != null && !usedItem.getType().equals(Material.NAME_TAG)) return;
+        if (!usedItem.hasItemMeta()) return;
         ItemMeta meta = usedItem.getItemMeta();
         if (!meta.hasDisplayName()) return;
 
         // Get component name first, so we can manually name the villager when canceling the event to avoid item consumption.
         Component newVillagerName = meta.displayName();
         assert newVillagerName != null; // Legitimate since we checked for hasDisplayName()
-        final String name = PlainTextComponentSerializer.plainText().serialize(newVillagerName);
+        final String name = plainTextSerializer.serialize(newVillagerName);
         Villager villager = (Villager) event.getRightClicked();
         WrappedVillager wVillager = villagerCache.getOrAdd(villager);
 
         if (nametags.contains(name.toLowerCase())) {
             if (wVillager.canOptimize(cooldown) || player.hasPermission(Bypass.NAMETAG_COOLDOWN.get())) {
-                VillagerOptimizeEvent optimizeEvent = new VillagerOptimizeEvent(wVillager, OptimizationType.NAMETAG, player, event.isAsynchronous());
+                VillagerOptimizeEvent optimizeEvent = new VillagerOptimizeEvent(
+                        wVillager,
+                        OptimizationType.NAMETAG,
+                        player,
+                        event.isAsynchronous()
+                );
+
                 if (!optimizeEvent.callEvent()) return;
 
                 if (!consume_nametag) {
@@ -107,13 +119,14 @@ public class OptimizeByNametag implements VillagerOptimizerModule, Listener {
                 wVillager.saveOptimizeTime();
 
                 if (notify_player) {
-                    VillagerOptimizer.getLang(player.locale()).nametag_optimize_success.forEach(player::sendMessage);
+                    VillagerOptimizer.getLang(player.locale()).nametag_optimize_success
+                            .forEach(line -> KyoriUtil.sendMessage(player, line));
                 }
 
                 if (log_enabled) {
                     VillagerOptimizer.getLog().info(Component.text(player.getName() +
                             " optimized villager by nametag '" + name + "' at " +
-                            CommonUtil.formatLocation(wVillager.villager().getLocation())).color(VillagerOptimizer.plugin_style.color()));
+                            CommonUtil.formatLocation(wVillager.villager().getLocation())).color(VillagerOptimizer.STYLE.color()));
                 }
             } else {
                 event.setCancelled(true);
@@ -123,7 +136,8 @@ public class OptimizeByNametag implements VillagerOptimizerModule, Listener {
                             .matchLiteral("%time%")
                             .replacement(CommonUtil.formatDuration(Duration.ofMillis(wVillager.getOptimizeCooldownMillis(cooldown))))
                             .build();
-                    VillagerOptimizer.getLang(player.locale()).nametag_on_optimize_cooldown.forEach(line -> player.sendMessage(line.replaceText(timeLeft)));
+                    VillagerOptimizer.getLang(player.locale()).nametag_on_optimize_cooldown
+                            .forEach(line -> KyoriUtil.sendMessage(player, line.replaceText(timeLeft)));
                 }
             }
         } else {
@@ -134,13 +148,14 @@ public class OptimizeByNametag implements VillagerOptimizerModule, Listener {
                 wVillager.setOptimizationType(OptimizationType.NONE);
 
                 if (notify_player) {
-                    VillagerOptimizer.getLang(player.locale()).nametag_unoptimize_success.forEach(player::sendMessage);
+                    VillagerOptimizer.getLang(player.locale()).nametag_unoptimize_success
+                            .forEach(line -> KyoriUtil.sendMessage(player, line));
                 }
 
                 if (log_enabled) {
                     VillagerOptimizer.getLog().info(Component.text(player.getName() +
                             " unoptimized villager by nametag '" + name + "' at " +
-                            CommonUtil.formatLocation(wVillager.villager().getLocation())).color(VillagerOptimizer.plugin_style.color()));
+                            CommonUtil.formatLocation(wVillager.villager().getLocation())).color(VillagerOptimizer.STYLE.color()));
                 }
             }
         }
